--- a/style.css
+++ b/style.css
@@ -30,6 +30,15 @@ ul{
     margin-right: 20px;
 }
 
+ol{
+    font-size: 24px;
+    background-color:rgb(220, 230, 240);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 li{
     margin-top: 5px;
     font-size: 24px;
