--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ p:hover{
     padding-left: 15px;
     padding-right: 15px;
     text-decoration: none;
+    background-color: beige;
+    border-radius: 10px;
 }
 
 .nav{
